# Gstreamer_Rust_Nextjs

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
