[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.19"
gstreamer-video = "0.19"
gstreamer-rtsp-server = "0.19"
glib = "0.19"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
futures-util = "0.3"


